Add signatureThreshold to API initiative.
