# controllers/initiatives_controller.js
@@ -1274,7 +1274,11 @@ function serializeApiInitiative(initiative) {
 		title: initiative.title,
 		phase: initiative.phase,
 		signingEndsAt: initiative.signing_ends_at,
-		signatureCount: initiative.external ? null : initiative.signature_count
+		signatureCount: initiative.external ? null : initiative.signature_count,
+
+		signatureThreshold: initiative.destination
+			? Initiative.getSignatureThreshold(initiative)
+			: null
 	}
 }
 
