# openapi.yaml
@@ -495,8 +495,17 @@ components:
           example: 1336
           description: |
             The digital signature count for the initiative.  
-            Note that for external initiatives (those not originated from
-            Rahvaalgatus) this may be null, indicating we don't know the count.
+            Note that for external initiatives (those not originated from Rahvaalgatus) this may be `null`, indicating we don't know the count.
+
+        signatureThreshold:
+          type: integer
+          nullable: true
+          example: 1000
+          description: |
+            The signature threshold for the initiative's destination.  
+            By law this is 1000 for the parliament and [1% of the population for the local government](https://www.riigiteataja.ee/akt/13312632?leiaKehtiv#para32).  
+            This could change when the population in a local government changes. Once an initiative gets sent, the threshold is fixed.  
+            Note that for initiatives still in the edit phase and without a destination, this may be `null`.
 
         signaturesSinceCount:
           type: integer
